# animal-rogue-vara-contract

./: .gitignore  Cargo.toml  README.md  build.rs
app/: Cargo.toml
app/src/: lib.rs
app/src/services/: mod.rs  utils.rs
app/src/services/admin/: mod.rs
app/src/services/game/: mod.rs
app/src/services/gold_vft/: funcs.rs  mod.rs
app/src/services/item_vmt/: funcs.rs  mod.rs  utils.rs
app/src/services/market/: mod.rs
client/: Cargo.toml  build.rs
client/src/: lib.rs
src/: lib.rs
tests/: gtest.rs
